feat: Xong API phâphn quyền permission